shufl-web/src/app/app.component.scss
@import "src/assets/scss/variables/colours";
@import "src/assets/scss/variables/dimensions";

.app-stage {
    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: column;

    .stage {
        width: 100%;
        height: calc(100% - #{$nav-bar-height});

        background-image: radial-gradient(
            circle,
            $background-gradient-primary-colour 0%,
            $background-gradient-secondary-colour 75%
        );

        position: relative;

        overflow: auto;
    }

    .nav-bar-container {
        width: 100%;
        height: $nav-bar-height;
    }
}

@supports (padding:max(0)) {
    .app-stage {
        .nav-bar-container {
            height: calc($nav-bar-height + env(safe-area-inset-bottom));
        }
    }
}

@media (min-width: $nav-bar-tablet-breakpoint) {
    .app-stage {
        flex-direction: row-reverse;

        .stage {
            width: calc(100% - #{$nav-bar-width});
            height: 100%;
        }

        .nav-bar-container {
            width: $nav-bar-width;
            height: 100%;
        }
    }
}

@media (min-width: 1920px) {
    .app-stage {
        .stage {
            width: calc(100% - #{$nav-bar-width-desktop});
        }

        .nav-bar-container {
            width: $nav-bar-width-desktop;
        }
    }
}

